# q_3body_wave_hpc

./: ABfun.m  CMakeLists.txt  README.md  displayspectrum.m  jdpoly.m  jdqz.m  linearize.m  nonlinearJD_interface.m
dataanalysis/: dataanalysis.py  get_files.bat
include/: .header.hpp.swo  gmres_solver.hpp  header.hpp  operations.hpp  tensor3b1d.hpp  tensor3b1d_blas.hpp
matlab/: b2d1_operator.m  gmres0.m  jdpoly.m  linearJDQZ_interface.m  splinepot.m  untitled.m
matlab/three-body-1D/: Kron2D.m  RepGS.m  chebD.m  correctOp.m  diagOp.m  evalpot.m  formKCMOp.m  formPrecondOp.m  gmres0.m  linearization.m  modified_gs.m  preCorrOp.m  qjd.m  solve3b_interface.m
matlab/two-body/: b2d1_operator.m  gmres1.m  jdpoly.m  jdqz.m  linearJDQZ_interface.m  nonlinearJD_interface.m  squarepot.m
src/: CMakeLists.txt  JacobiDavidson.cpp  Makefile  QRes_3b1d.cpp  SparseMatrixOperations.cpp  buildMatrix.cpp  corr_test.cpp  display.cpp  gmres_solver.cpp  header.hpp  main.cpp  main.x  modifiedGS.cpp  operations.cpp  run_tests.cpp  test_operations.cpp  testlapack.c
